# retaIL

./: .gitignore  Makefile  README.md  df_implementation.ipynb  poetry.toml  pyproject.toml  requirements.txt
data/: README.md
data_gold/: domain.py  in_memory_repository.py  repository.py
data_silver/: domain.py  repository.py
model/: featurizer.py  forecaster.py  validator.py
src/retail/: domain.py  schema.py
src/retail/data/m5/: loader.py
src/retail/data/xm5/: loader.py
src/retail/data_layer/: generic_silver_to_gold.py  interfaces.py  schema.py
src/retail/data_process/: generic_silver_to_gold.py  interfaces.py
src/retail/demand/: builder.py  cat_boost_demand_predictor.py  demand_model_data.py  generic_demand_predictor.py  interfaces.py
src/retail/evaluator/: generic_evaluator.py
src/retail/split/: basic.py
src/retail/transformer/: DemandFeatureSelector.py  DemandScope.py  NoSaleSkus.py  demand_aggregator.py  demand_feature_selector.py  demand_scope.py  interfaces.py  lagged_feature.py
tests/: test_workflow.py
xm5/: main.py  rm5_repository.py  utilities.py
